@@ -32,7 +32,7 @@ struct manager
 
 void clear_tooltips();
 void clear_tooltips(const SDL_Rect& rect);
-void add_tooltip(const SDL_Rect& rect, const std::string& message, const std::string& action ="");
+void add_tooltip(const SDL_Rect& rect, const std::string& message, const std::string& action ="", bool use_markup = true);
 void process(int mousex, int mousey);
 
 // Check if we clicked on a tooltip having an action.
