@@ -68,6 +68,7 @@ Version 1.11.0-svn:
  * Multiplayer:
    * Fix an accidental terrain type change in Isar's Cross
    * Fix attacker side being human in 6p_Team_Survival (bug #19400)
+   * Ignore Pango markup in map descriptions (bug #19210)
  * Music and sound effects:
    * Replaced some of the wolf hit sounds with lower-pitched ones
  * Terrain:
